syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.homework.grpc";
option java_outer_classname = "RoutingToOrderServiceProto";

service OrderService {
  rpc createOrder (GatewayRequestToCreate) returns (ResponseCreatedOrder);
  rpc getAllOrder (GatewayRequestAllOrder) returns (ResponseAllOrder);
  rpc getOrder (GatewayRequestOrder) returns (ResponseOrder);
}

enum Status {
  NEW = 0;
  FINISHED = 1;
  CANCELLED = 2;
}
message Order {
  int32 id = 1;
  int32 userId = 2;
  float cost = 3;
  string description = 4;
  Status status = 5;
}

message GatewayRequestToCreate {
  int32 id = 1;
  float cost = 2;
  string description = 3;
}

message GatewayRequestAllOrder {
  int32 id = 1;
}

message GatewayRequestOrder {
  int32 idOrder = 1;
}

message ResponseCreatedOrder {
  bool isOk = 1;
  int32 idOrder = 2;
}

message ResponseAllOrder {
  bool isOk = 1;
  repeated Order orders = 2;
}

message ResponseOrder {
  bool isOk = 1;
  Order order = 2;
}